deploy/network-policy/monitoring/log/allow-all-log.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-for-selected-pods-loki
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}

---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-for-selected-pods-promtail
#   namespace: dev-monitoring
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: promtail
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#   - {}
#   egress:
#   - {}
