deploy/network-policy/monitoring/log/allow-loki.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-internal-communication
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: loki
    ports:
    - protocol: TCP
      port: 3100   # HTTP API / query
    - protocol: TCP
      port: 9095   # gRPC internal
    - protocol: TCP
      port: 7946
    - protocol: UDP
      port: 7946
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: loki
    ports:
    - protocol: TCP
      port: 3100
    - protocol: TCP
      port: 9095
    - protocol: TCP
      port: 7946
    - protocol: UDP
      port: 7946

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-from-grafana
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: dev-grafana
    ports:
    - protocol: TCP
      port: 3100

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-from-promtail
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: promtail
    ports:
    - protocol: TCP
      port: 3100
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-to-dns
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-to-s3-minio
  namespace: dev-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.10.10.0/24
    ports:
    - protocol: TCP
      port: 9000

# ---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-loki-to-promtail-ip-range
#   namespace: dev-monitoring
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: loki
#   policyTypes:
#   - Egress
#   egress:
#   - to:
#     - ipBlock:
#         cidr: 10.10.0.0/24
#     ports:
#     - protocol: TCP
#       port: 3101
#   - to:
#     - ipBlock:
#         cidr: 10.1.0.0/16
#     ports:
#     - protocol: TCP
#       port: 3101
